# AI-Agent

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs
crates/clawd/: Cargo.toml
crates/clawd/src/: main.rs
crates/clawd/static/: app.js  index.html  styles.css
crates/plugins/src/: hooks.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  hooks.rs  lib.rs  remote.rs
crates/rusty-claude-cli/: Cargo.toml
crates/rusty-claude-cli/src/: args.rs  main.rs  render.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
data/: schema.sql
data/corpus/asm/: Readme.md
data/corpus/docs/: Readme.md
data/corpus/rust/: Readme.md
data/models/: Readme.md
runners/llama/: README.md
scripts/: init-knowledge-db.ps1  init-knowledge-db.sh  run-clawd.ps1  run-clawd.sh  run-llama.ps1  run-llama.sh
